<resources>
    <string name="app_name">RedPhone</string>
    <string name="RedPhone_id_like_to_call_you_securely_using_redphone_you_can_install_redphone_from_the_play_store_s">I\'d like to call you securely using RedPhone. You can install RedPhone from the Play Store: %s</string>
    <string name="RedPhone_answering">Answering...</string>
    <string name="RedPhone_ending_call">Ending call</string>
    <string name="RedPhone_dialing">Dialing...</string>
    <string name="RedPhone_cancelling_call">Cancelling call</string>
    <string name="RedPhone_call_rejected">Call rejected</string>
    <string name="RedPhone_ringing">Ringing...</string>
    <string name="RedPhone_busy">Busy...</string>
    <string name="RedPhone_connected">Connected</string>
    <string name="RedPhone_connecting">Connecting...</string>
    <string name="RedPhone_handshake_failed_exclamation">Handshake failed!</string>
    <string name="RedPhone_recipient_unavailable">Recipient unavailable</string>
    <string name="RedPhone_performing_handshake">Performing handshake...</string>
    <string name="RedPhone_server_failed_exclamation">Server failed!</string>
    <string name="RedPhone_client_failed">Client failed</string>
    <string name="RedPhone_login_failed_exclamation">Login failed!</string>
    <string name="RedPhone_message_from_the_server">Message from the server:</string>
    <string name="RedPhone_number_not_registered_with_redphone_exclamation">Number not registered with RedPhone!</string>
    <string name="RedPhone_the_number_you_dialed_is_not_registered_with_redphone_both_parties_of_a_call_need_to_have_redphone_installed">The number you dialed is not registered with RedPhone.  Both parties of a call need to have RedPhone installed in order to have a secure conversation.  Would you like to send a RedPhone install link to the contact you were trying to dial?</string>
    <string name="RedPhone_no_thanks_exclamation">No thanks!</string>
    <string name="RedPhone_yes_exclamation">Yes!</string>
    <string name="RedPhone_codec_failed_to_initialize">Codec Failed to Initialize</string>
    <string name="RedPhoneService_missed_redphone_call">Missed RedPhone Call</string>
    <string name="MicrophoneReader_microphone_failed_to_initialize_try_changing_audio_call_mode_in_settings">Microphone failed to initialize.  Try changing Audio Call Mode in Settings?</string>
    <string name="RobustAudioTrack_audiotrack_did_not_initialize">AudioTrack did not initialize</string>
    <string name="AboutActivity_about_redphone">About RedPhone</string>
    <string name="AboutActivity_redphone_beta_s">RedPhone Beta %s</string>
    <string name="ApplicationPreferencesActivity_redphone_settings">RedPhone Settings</string>
    <string name="ApplicationPreferencesActivity_updating_signaling_method">Updating Signaling Method</string>
    <string name="ApplicationPreferencesActivity_changing_signaling_method_this_could_take_a_second">Changing signaling method, this could take a second...</string>
    <string name="ApplicationPreferencesActivity_error_registering_with_c2dm_server">Error registering with C2DM server...</string>
    <string name="ApplicationPreferencesActivity_error_unregistering_with_c2dm_server">Error unregistering with C2DM server...</string>
    <string name="ApplicationPreferencesActivity_error_communicating_with_c2dm_server">Error communicating with C2DM server...</string>
    <string name="CallMetricsInfo__metrics_collection_details">To help improve call quality, you can choose to send Open WhisperSystems information that will help us to better understand RedPhone\'s performance.  This data is never visible to a third party.  All call metrics data is encrypted before it is stored or uploaded to Open WhisperSystem\'s servers.  When enabled, the following information is collected during each call:</string>
    <string name="CallMetricsInfo__title">Quality Metrics</string>
    <string name="CallMetricsInfo__device_description">Device Description</string>
    <string name="CallMetricsInfo__device_description_explanation">Model, manufacturer, carrier, connection type, OS version, persistent random UUID</string>
    <string name="CallMetricsInfo__mic_and_codec_performance">Microphone and Codec Performance</string>
    <string name="CallMetricsInfo__mic_and_codec_performance_explanation">Mic clipping, dropped audio samples, average call volume</string>
    <string name="CallMetricsInfo__packet_arrival">Packet arrival interval histogram</string>
    <string name="CallMetricsInfo__packet_arrival_explanation">Provides data on network latency jitter</string>
    <string name="CallMetricsInfo__out_of_order_arrival">Out of order arrival counts</string>
    <string name="CallMetricsInfo__out_of_order_arrival_explanation">Tracks packet delivery irregularities</string>
    <string name="CallMetricsInfo__audio_gap_fill_counts">Audio Gap Fills</string>
    <string name="CallMetricsInfo__audio_gap_fill_counts_explanation">Indicates when missing data required audio to be synthesized</string>
    <string name="CallMetricsInfo__system_metrics">System Metrics</string>
    <string name="CallMetricsInfo__system_metrics_explanation">CPU load, memory usage</string>
    <string name="CallQualityDialog_call_feedback">Call Feedback</string>
    <string name="CallQualityDialog_call_quality">Call Quality</string>
    <string name="CallQualityDialog_call_quality_rating">Call Quality Rating</string>
    <string name="CallQualityDialog__i_would_like_to_help_by_sending_performance_statistics">Send performance metrics</string>
    <string name="CallQualityDialog__i_would_like_to_rate_the_quality_of_my_call_once_it_is_over">Allow me to rate calls after they complete</string>
    <string name="CallQualityDialog__provide_call_quality_feedback">Provide call quality feedback</string>
    <string name="CallQualityDialog__redphone">RedPhone</string>
    <string name="CallQualityDialog__we_re_making_changes">We\'re Making Changes</string>
    <string name="CallQualityDialog__whispersystems_needs_your_help_pretext">Open WhisperSystems needs your help. As we work to improve the quality of our calls, we need feedback and performance metrics to improve the system. </string>
    <string name="CallQualityDialog__linktext">Learn more about data collection</string>
    <string name="CallQualityDialog__whispersystems_needs_your_help_posttext">.\n\nOpt in below to help make RedPhone better.</string>
    <string name="CallQualityDialog__you_can_update_these_settings_at_any_time_through_the_general_settings_menu">You can update these preferences at any time through the RedPhone settings menu</string>
    <string name="CallQualityDialog__please_rate_the_audio_quality_of_the_call_below">Please rate the quality of this call</string>
    <string name="CallQualityDialog__submit">Submit</string>
    <string name="CallQualityDialog__select_the_issues_that_affected_this_call">Select the issues that affected this call</string>
    <string name="CallQualityDialog__done">Done</string>
    <string name="CallScreen_incoming_call">Incoming call...</string>
    <string name="CallScreen_audio_menu_handset">Handset</string>
    <string name="CallScreen_audio_menu_speaker">Speaker</string>
    <string name="CallScreen_audio_menu_headset">Bluetooth</string>
    <string name="ContactsListActivity_loading">Loading...</string>
    <string name="ContactsListActivity_no_contacts_found">No contacts found.</string>
    <string name="CreateAccountActivity_register_your_redphone">Register your RedPhone</string>
    <string name="CreateAccountActivity_you_must_specify_your_phone_number">You must specify your phone number!</string>
    <string name="CreateAccountActivity_select_your_country">Select your country</string>
    <string name="CreateAccountActivity_you_must_specify_your_country_code">You must specify your country code</string>
    <string name="CreateAccountActivity_the_number_you_specified_s_is_invalid">The number you specified (%s) is invalid.</string>
    <string name="CreateAccountActivity_invalid_number">Invalid number</string>
    <string name="CreateAccountActivity_we_will_now_verify_that_the_following_number_is_associated">We will now verify that the following number is associated with this device:\n\n%s\n\nIs this number correct, or would you like to edit it before continuing?</string>
    <string name="CreateAccountActivity_continue">Continue</string>
    <string name="CreateAccountActivity_edit">Edit</string>
    <string name="NotificationBarManager_redphone_call_in_progress">RedPhone call in progress</string>
    <string name="NotificationBarManager_missed_redphone_call_from_s">Missed RedPhone call from %s</string>
    <string name="NotificationBarManager_missed_redphone_call">Missed RedPhone call</string>
    <string name="QualityReporting_would_you_like_to_send_diagnostic_information_about_this_call_to_whisper_systems">Would you like to send diagnostic information about this call to Whisper Systems?</string>
    <string name="QualityReporting_never">Never</string>
    <string name="QualityReporting_send_diagnostics">Send Diagnostics?</string>
    <string name="RecentCallListActivity_loading">Loading...</string>
    <string name="RecentCallListActivity_empty_call_log">Empty call log.</string>
    <string name="RedPhoneChooser_upgrade_to_redphone">Upgrade to RedPhone?</string>
    <string name="RedPhoneChooser_this_contact_also_uses_redphone_would_you_like_to_upgrade_to_a_secure_call">This contact also uses RedPhone. Would you like to upgrade to a secure call?</string>
    <string name="RedPhoneChooser_secure_call">Secure Call</string>
    <string name="RedPhoneChooser_insecure_call">Insecure Call</string>
    <string name="RegistrationProgressActivity_verifying_number">Verifying number</string>
    <string name="RegistrationProgressActivity_edit_s">Edit %s</string>
    <string name="RegistrationProgressActivity_registration_complete">Registration complete!</string>
    <string name="RegistrationProgressActivity_possible_problems">Possible problems.</string>
    <string name="RegistrationProgressActivity_you_must_enter_the_code_you_received_first">You must enter the code you received first...</string>
    <string name="RegistrationProgressActivity_connecting">Connecting</string>
    <string name="RegistrationProgressActivity_connecting_for_verification">Connecting for verification...</string>
    <string name="RegistrationProgressActivity_network_error">Network Error!</string>
    <string name="RegistrationProgressActivity_unable_to_connect">Unable to connect. Please check your network connection and try again.</string>
    <string name="RegistrationProgressActivity_verification_failed">Verification Failed!</string>
    <string name="preferences__general_settings">General Settings</string>
    <string name="preferences__prompt_for_call_upgrade">Prompt for call upgrade</string>
    <string name="preferences__when_making_insecure_calls_prompt_for_upgrade_to_redphone_if_contact_is_redphone_enabled">When making insecure calls, prompt for upgrade to RedPhone if contact is RedPhone-enabled.</string>
    <string name="preferences__enable_audio_compatibility_mode_higher_latency">Enable Audio Compatibility Mode [higher latency]</string>
    <string name="preferences__compatibility_mode">Compatibility Mode</string>
    <string name="preferences__use_in_call_audio_mode">Use In-Call Audio Mode</string>
    <string name="preferences__enable_if_audio_comes_from_rear_speaker">Enable if audio comes from rear speaker</string>
    <string name="preferences__single_thread_mode">Single-Thread Mode</string>
    <string name="preferences__may_improve_performance_on_some_devices">May improve performance on some devices</string>
    <string name="preferences__force_minimum_latency">Force minimum latency</string>
    <string name="preferences__reduce_latency_at_the_expense_of_audio_quality">Reduce latency at the expense of audio quality</string>
</resources>