<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/preferences__general_settings">
    <CheckBoxPreference android:defaultValue="true"
                        android:key="pref_prompt_upgrade"
                        android:title="@string/preferences__prompt_for_call_upgrade"
                        android:summary="@string/preferences__when_making_insecure_calls_prompt_for_upgrade_to_redphone_if_contact_is_redphone_enabled"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences__signaling_settings">
    <CheckBoxPreference android:defaultValue="false"
                        android:key="pref_use_c2dm"
                        android:title="@string/preferences__use_c2dm_for_signaling"
                        android:summary="@string/preferences__use_google_s_push_messaging_rather_than_sms_for_signaling" />
  </PreferenceCategory>
  <!--   <PreferenceCategory android:title="Privacy Settings">
    <CheckBoxPreference android:defaultValue="true"
    					android:key="pref_ask_diagnostic_reporting"
    					android:title="Send Diagnostics"
    					android:summary="Display an option to send diagnostic data to Whisper Systems when a call ends" />
    				    		
  </PreferenceCategory>-->
  <PreferenceCategory android:title="@string/preferences__audio_settings">
    <CheckBoxPreference android:defaultValue="false"
                        android:key="pref_audio_compat"
                        android:summary="@string/preferences__enable_audio_compatibility_mode_higher_latency"
                        android:title="@string/preferences__compatibility_mode" />
    <CheckBoxPreference android:defaultValue="false"
                        android:key="pref_speaker_incall"
                        android:title="@string/preferences__use_in_call_audio_mode"
                        android:summary="@string/preferences__enable_if_audio_comes_from_rear_speaker" />
    <CheckBoxPreference android:defaultValue="false"
                        android:key="pref_singlethread"
                        android:title="@string/preferences__single_thread_mode"
                        android:summary="@string/preferences__may_improve_performance_on_some_devices" />
    <CheckBoxPreference android:defaultValue="false"
                        android:key="pref_min_latency"
                        android:title="@string/preferences__force_minimum_latency"
                        android:summary="@string/preferences__reduce_latency_at_the_expense_of_audio_quality" />
  </PreferenceCategory>
</PreferenceScreen>

